re PR gcov-profile/57269 (ICE in gcov_open, at gcov-io.c:82)

2013-05-14  Richard Biener  <rguenther@suse.de>

	PR gcov-profile/57269
	Backport from mainline
	2012-06-30  Nathan Sidwell  <nathan@acm.org>

	* coverage.c (coverage_init): Read counts file before writing
	graph header.

From-SVN: r198875